--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.20",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4",
